<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<CheckBoxPreference
		android:title="@string/check_preference_title"
		android:summary="@string/check_preference_summary"
		android:key="pref_notifications" 
		android:defaultValue="true">
	</CheckBoxPreference>
	<PreferenceScreen
		android:title="@string/screen_title">
		<EditTextPreference 
			android:title="@string/edit_preference_title"
			android:summary="@string/edit_preference_dialog_title"
			android:key="pref_username">		    
		</EditTextPreference>
	</PreferenceScreen>
	<ListPreference 
		android:dependency="pref_notifications" 
        android:key="pref_notifications_language" 	
        android:title="@string/list_preference_title" 	
        android:dialogTitle="@string/list_preference_dialog_title" 
        android:entries="@array/pref_languages"    
        android:entryValues="@array/pref_languages_values">	    
	</ListPreference>
</PreferenceScreen>
