<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/lblCheckNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_preference_title" />
        
	<TextView
	    android:id="@+id/txtCheckNotifications"
	    android:layout_toRightOf="@id/lblCheckNotifications"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="10dp"/>
	
    <TextView
        android:id="@+id/lblEditUsername"
        android:layout_below="@id/lblCheckNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_preference_title" />
        
	<TextView
	    android:id="@+id/txtEditUsername"
	    android:layout_below="@id/txtCheckNotifications"
	    android:layout_toRightOf="@id/lblEditUsername"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="10dp"/>
	
	<TextView
        android:id="@+id/lblListLanguage"
        android:layout_below="@id/lblEditUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_preference_title" />
        
	<TextView
	    android:id="@+id/txtListLanguage"
	    android:layout_below="@id/txtEditUsername"
	    android:layout_toRightOf="@id/lblListLanguage"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="10dp"/>	
	    
	<EditText 
	    android:id="@+id/txtUsername"
	    android:layout_below="@id/lblListLanguage"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:hint="@string/edit_preference_title"/>
	
	<Button 
	    android:id="@+id/btnSave"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/txtUsername"
	    android:text="@string/save"/>
</RelativeLayout>
